# bilibili-video-dl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: bangumi.rs  cli.rs  download.rs  fetch.rs  ffmpeg.rs  main.rs  parser.rs  tui.rs
src/http/: client.rs  download.rs  fetch.rs  mod.rs
