[package]
name = "bili-dl"
version = "1.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json", "gzip"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
dirs = "5.0"
ffmpeg-next = "7.0"
regex = "1.10"
crossterm = "0.28.1"
